<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/colorCleanBlue"
    android:orientation="vertical"
    tools:context="br.ufg.inf.weleforu.RegisterActivity">

    <LinearLayout
        android:id="@+id/containerLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorClean"
        android:padding="5dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_register" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:id="@+id/email" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textVisiblePassword"
            android:hint="@string/hint_password"
            android:id="@+id/password" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textVisiblePassword"
            android:hint="@string/hint_password_again"
            android:id="@+id/checkPassword" />

        <Button
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:id="@+id/registerButton"
            android:text="@string/register"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorClean"
            android:onClick="register" />
    </LinearLayout>

    <TextView
        android:id="@+id/author"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAlignment="center"
        android:gravity="bottom"
        android:text="@string/author_message"
        android:layout_below="@id/registerButton"/>

</RelativeLayout>